# vmc-fys4411

./: '  .gitignore  LICENSE  README.md
vmc/: Cargo.toml  README.md  ̈́
vmc/data/ana_vs_num/1D_100N/: BruteForceMetropolis.csv  ImportanceMetropolis.csv
vmc/data/bruteforce_vs_importance/: README.md
vmc/data/dim_and_n/: ThreadId(2).csv  ThreadId(3).csv  ThreadId(4).csv  ThreadId(5).csv  ThreadId(6).csv  ThreadId(7).csv  ThreadId(8).csv  ThreadId(9).csv
vmc/data/interacting_elliptical/: BruteForceMetropolis.csv  ImportanceMetropolis.csv
vmc/data/sgd_interacting/: BruteForceMetropolis.csv  ImportanceMetropolis.csv
vmc/data/track_each_cycle/: BruteForceMetropolis.csv  ImportanceMetropolis.csv
vmc/plots/ana_vs_num/1D_1N/: File_Name.csv
vmc/python/: SGD_alphas.py  SGD_learning-rate.py  ana_vs_num.py  analytical_E_vs_a.py  blocking.py  bruteforce_importance_plotter.py  bruteforcemetropolis.py  dim_and_n.py  e_vs_alpha.py  interacting_elliptical.py  pathmaker.py  plotter.py  sgd_interacting.py  some.py  todolist  track_each_cycle.py  trying.py  writer.rs
vmc/python/data/: dummy_1D1N_analytical.txt  dummy_1D_100_particles_num.csv  dummy_experiment.txt
vmc/python/dummydata/: dummy_1D_100_particles_ana.csv  experiment_1D_1_particles_num.csv
vmc/python/lib/: analytic.py  blocking.py  pathmaker.py  plotter.py  utils.py
vmc/src/: analytical.rs  create_output.rs  hamiltonian.rs  main.rs  metropolis.rs  montecarlo.rs  originalmain.rs  particle.rs  plot_output  plot_output.rs  produce_output.rs  solver.rs  system.rs  threadpool.rs  wavefunction.rs  writer.rs
(+397 files in other folders)
