[package]
name = "vmc"
version = "0.1.0"
authors = ["Knut Magnus Aasrud <km@aasrud.com>", "Amund Midtgard Raniseth <amund.raniseth@gmail.com>", "Anna Stray Rongve <anna.stray.rongve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
